# sipserver

./: .clang-format  .clangd  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml  extensions.conf  main.cpp  notes.txt  pjsip.conf  test.sh  test2.sh
cmake/: deps.cmake
config/: groq.json  ollama.json
include/: abs_ws_client.h  adapter.h  agent.h  auralis_client.h  chat_manager.h  groq_client.h  groq_provider.h  jAccount.h  jCall.h  jMediaPort.h  jVAD.h  jmanager.h  llm_manager.h  llm_provider.h  logger.h  manager.h  provider.h  provider_manager.h  request.h  request_factory.h  webrtcvad.h  whisper_client.h
include/agent/: agent.h
include/common/: message.h
include/core/: configuration.h
include/db/: GlobalDatabase.h  InMemoryDatabase.h
include/provider/: groq_provider.h  lua_config.h  lua_provider.h  ollama_provider.h  provider.h  provider_manager.h  request.h  request_factory.h  response.h  tool_handler.h
include/server/: server.h
include/sip/: account.h  call.h  manager.h  media_port.h  vad.h
include/stream/: abs_ws_client.h  auralis_client.h  ultravox_client.h  whisper_client.h
include/utils/: logger.h  status.h
include/webrtc/rtc_base/: checks.cc
lua/: config.lua  dify.lua  groq.lua  ollama.lua  openai.lua  provider.lua
src/: account.cpp  agent.cpp  call.cpp  configuration.cpp  groq_provider.cpp  jAccount.cpp  jCall.cpp  jMediaPort.cpp  jVAD.cpp  manager.cpp  media_port.cpp  ollama_provider.cpp  provider_manager.cpp  server.cpp  vad.cpp
tests/: test_server.py  test_ws.py
